# UcoRecSys

./: .gitignore  README.md  REFS.md  TODO.md  config.py  course_dataset.py  kfold_eval_coursera_results.csv  kfold_eval_itm_results.csv  kfold_eval_mars_results.csv  main.py  main_surprise.py  model.py  pyproject.toml  report.html  results.txt  results_study.ipynb  run_evals.sh  run_stats.sh  surprise_coursera_kfold.csv  surprise_itm_kfold.csv  surprise_mars_kfold.csv
data/: implicit_ratings_en.csv
data/doris_dataset/: .~lock.CourseInformationTable.xlsx#  StudentInformationTable.csv
data/mars_dataset/: explicit_ratings_fr.csv  users_fr.csv
database/: tfg_db.sql
results/: metrics_kfold_k=5_itm_top-10.csv  metrics_kfold_k=5_itm_top-15.csv  metrics_kfold_k=5_itm_top-5.csv  metrics_kfold_k=5_mars_top-10.csv  metrics_kfold_k=5_mars_top-15.csv  metrics_kfold_k=5_mars_top-5.csv  surprise_kfold_k=5_itm_top-10.csv  surprise_kfold_k=5_itm_top-15.csv  surprise_kfold_k=5_itm_top-5.csv  surprise_kfold_k=5_mars_top-10.csv  surprise_kfold_k=5_mars_top-15.csv  surprise_kfold_k=5_mars_top-5.csv
results/stats/: stats_10.csv  stats_15.csv  stats_5.csv
src/: args_parser.py  config.py  datamodule.py  dataset.py  datasets.py  db.py  engine.py  evaluation.py  main.py  main_surprise.py  model.py  model_eval.py  models.py  stats.py  surprise_eval.py
